fixed doc naming issue, adjusted workflow yml to ref newly name file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,7 @@
 name: Deploy Prod-E
+# For detailed documentation on this workflow, see:
+# 1. .github/CICD.md - Quick reference
+# 2. docs/ci-cd.md - Complete documentation
 on:
   push:
     branches: [main]
