--- a/backend/Dockerfile.prometheus
+++ b/backend/Dockerfile.prometheus
@@ -1,3 +1,18 @@
+# Base image for Prometheus
 FROM prom/prometheus:latest
+
+# Copy Prometheus configuration
 COPY prometheus.yml /etc/prometheus/
+
+# Expose port
 EXPOSE 9090
+
+# Add health check using the built-in health endpoint
+HEALTHCHECK --interval=30s --timeout=5s --start-period=60s --retries=3 \
+    CMD [ -x "$(command -v wget)" ] && wget -q -O- http://localhost:9090/-/healthy || exit 1
+
+# Set command with proper path prefix configuration
+CMD [ "/bin/prometheus", \
+    "--config.file=/etc/prometheus/prometheus.yml", \
+    "--web.external-url=/prometheus", \
+    "--web.route-prefix=/" ]
