Fix: Add explicit permissions for GitHub issue creation in health monitoring workflow

--- a/.github/workflows/health-monitor.yml
+++ b/.github/workflows/health-monitor.yml
@@ -13,6 +13,11 @@ on:
         type: boolean
         default: true
 
+# Add permissions needed for issue creation
+permissions:
+  contents: read
+  issues: write
+
 jobs:
   health-check:
     name: Monitor Service Health
