Fix: Use continue-on-error for Slack notification instead of checking secret existence

--- a/.github/workflows/health-monitor.yml
+++ b/.github/workflows/health-monitor.yml
@@ -199,7 +199,8 @@ jobs:
           search_existing: open
 
       - name: Notify on Slack
-        if: steps.health_check.outputs.status == 'unhealthy' && (github.event_name == 'schedule' || github.event.inputs.notify == 'true') && secrets.SLACK_WEBHOOK_URL != ''
+        if: steps.health_check.outputs.status == 'unhealthy' && (github.event_name == 'schedule' || github.event.inputs.notify == 'true')
+        continue-on-error: true
         uses: 8398a7/action-slack@v3
         with:
           status: custom
