--- a/backend/provisioning/datasources/datasources.yml
+++ b/backend/provisioning/datasources/datasources.yml
@@ -2,7 +2,7 @@ apiVersion: 1
 datasources:
   - name: Prometheus
     type: prometheus
-    url: http://application-load-balancer-98932456.us-west-2.elb.amazonaws.com/prometheus
+    url: http://prod-e-alb-962304124.us-west-2.elb.amazonaws.com/prometheus
     access: proxy
     isDefault: true
     editable: false
