--- a/backend/prometheus.yml
+++ b/backend/prometheus.yml
@@ -6,7 +6,7 @@ scrape_configs:
   - job_name: 'prod-e-backend'
     metrics_path: '/metrics'
     static_configs:
-      - targets: ['application-load-balancer-98932456.us-west-2.elb.amazonaws.com:3000'] # ALB DNS for backend service
+      - targets: ['prod-e-alb-962304124.us-west-2.elb.amazonaws.com:3000'] # ALB DNS for backend service
 
   - job_name: 'prometheus'
     static_configs:
