--- a/.github/workflows/resource-check.yml
+++ b/.github/workflows/resource-check.yml
@@ -13,10 +13,19 @@ on:
         description: 'Generate a CSV report'
         type: boolean
         default: true
+  workflow_call:
+    # Make this workflow callable from other workflows
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
+      SLACK_WEBHOOK_URL:
+        required: false
 
 jobs:
   resource-check:
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' || github.event_name == 'workflow_call' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
