Fix API docs tests and update CI workflow to use reliable tests

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,6 +82,7 @@ jobs:
       - name: Run backend tests
         run: |
           cd backend
+          npm install
           npm test
 
       - name: Prepare Lambda function
