Add CDKTF initialization step to workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,6 +98,9 @@ jobs:
           npm ci
           cd ../..
 
+      - name: Initialize CDKTF
+        run: npm run get
+
       - name: Import existing resources
         run: |
           npx cdktf synth
