--- a/.github/workflows/health-monitor.yml
+++ b/.github/workflows/health-monitor.yml
@@ -1,8 +1,11 @@
-name: Health Monitoring
-# Runs hourly health checks on the infrastructure
+name: Health Monitor
+# Runs health checks after deployment
 # For complete documentation, see docs/ci-cd.md
 
 on:
+  workflow_run:
+    workflows: ['Deploy Infrastructure']
+    types: [completed]
   schedule:
     # Run hourly at minute 0
     - cron: '0 * * * *'
@@ -39,6 +42,21 @@ jobs:
           npm ci
           sudo apt-get update
           sudo apt-get install -y jq curl
+
+      - name: Add ALB DNS Check
+        run: |
+          ALB_DNS="prod-e-alb-962304124.us-west-2.elb.amazonaws.com"  # Real ALB DNS
+          if curl -s -o /dev/null -w "%{http_code}" http://$ALB_DNS/grafana | grep -q 200; then
+            echo "Grafana health check passed."
+          else
+            echo "Grafana health check failed!"
+            exit 1
+          fi
+          # Check ECS services
+          aws ecs describe-services --cluster prod-e-cluster --services grafana-service --region us-west-2 --query 'services[0].runningCount' --output text
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Run health check
         id: health_check
