--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@cdktf/provider-aws": "^19.56.1",
     "archiver": "^7.0.1",
-    "cdktf": "0.19.0",
+    "cdktf": "^0.20.11",
     "constructs": "^10.4.2",
     "jszip": "^3.10.1"
   },
