--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
 
       - run: npm install -g cdktf-cli@0.20.11
       - run: npm ci
-      - run: cdktf get
+      - run: cdktf get --skip-provider-schema-validation
       - run: npm run synth
       - run: chmod +x scripts/monitoring/resource_check.sh
       - run: scripts/monitoring/resource_check.sh
