--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,36 +13,23 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-        with: { node-version: 18.x }
-      - uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.5.0
-      - uses: aws-actions/configure-aws-credentials@v2
+          node-version: 18.20.7
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
-
-      # Debug steps
-      - name: Debug - Check JSON Files
-        run: |
-          echo "Checking JSON files..."
-          echo "cdktf.json:"
-          cat cdktf.json
-          echo ""
-          echo "Checking for BOM markers or special characters:"
-          hexdump -C cdktf.json | head -5
-          echo ""
-          echo "Validating cdktf.json:"
-          node -e "console.log(JSON.parse(require('fs').readFileSync('cdktf.json', 'utf8')))"
-
-      - run: npm install -g cdktf-cli@0.20.11
+      - run: npm install -g cdktf-cli@0.20.7
       - run: npm ci
-      - run: cdktf get --skip-provider-schema-validation
+      - run: rm -rf .gen # Clean generated files
+      - run: cdktf get || (echo "Retrying cdktf get..." && cdktf get) # Retry on failure
       - run: npm run synth
       - run: chmod +x scripts/monitoring/resource_check.sh
       - run: scripts/monitoring/resource_check.sh
       - run: npm test # Run backend tests
+      - run: cd infrastructure/lambda && rm -f backup.zip && zip -j backup.zip backup.js && ls -la backup.zip && unzip -l backup.zip && rm -f ../../dummy-backup.zip && cp backup.zip ../../dummy-backup.zip && ls -la ../../dummy-backup.zip
       - run: cdktf deploy --auto-approve
 
   resource-check:
