--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18.20.7
+      - uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.5.7
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
