--- a/.github/workflows/health-monitor.yml
+++ b/.github/workflows/health-monitor.yml
@@ -30,6 +30,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.20.7
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3 # Add Terraform for consistency
+        with:
+          terraform_version: 1.5.7
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
