--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,10 @@ jobs:
       - run: npm install -g cdktf-cli@0.20.7
       - run: npm ci
       - run: rm -rf .gen # Clean generated files
-      - run: cdktf get || (echo "Retrying cdktf get..." && cdktf get) # Retry on failure
+      - run: cdktf get --skip-provider-schema-validation || (echo "Retrying cdktf get..." && cdktf get --skip-provider-schema-validation) # Retry on failure
       - run: npm run synth
+      - run: chmod +x import-commands.sh
+      - run: cd cdktf.out/stacks/prod-e && sh ../../../import-commands.sh && cd ../../..
       - run: chmod +x scripts/monitoring/resource_check.sh
       - run: scripts/monitoring/resource_check.sh
       - run: npm test # Run backend tests
