Update import-commands.sh to include --allow-missing-config flag directly in commands

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,11 +29,12 @@ jobs:
       - run: rm -rf .gen # Clean generated files
       - run: cdktf get --skip-provider-schema-validation || (echo "Retrying cdktf get..." && cdktf get --skip-provider-schema-validation) # Retry on failure
       - run: npm run synth
-      - run: cd cdktf.out/stacks/prod-e && terraform init && sed -i 's/terraform import/terraform import --allow-missing-config/g' ../../../import-commands.sh && cd ../../..
       - run: chmod +x import-commands.sh
-      - run: ./import-commands.sh
+      - run: cp import-commands.sh cdktf.out/stacks/prod-e/
+      - run: cd cdktf.out/stacks/prod-e && terraform init -upgrade && sed -i 's/terraform import/terraform import --allow-missing-config/g' ./import-commands.sh && sh ./import-commands.sh > import-commands.log 2>&1 && cat import-commands.log && cd ../../..
       - run: npm test
       - run: cd infrastructure/lambda && rm -f backup.zip && zip -j backup.zip backup.js && ls -la backup.zip && unzip -l backup.zip && cp backup.zip ../../dummy-backup.zip && ls -la ../../dummy-backup.zip
+      - run: cp dummy-backup.zip cdktf.out/stacks/prod-e/
       - run: cdktf deploy --auto-approve
 
   resource-check:
